addressing slide changes to seminar

--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
 
 
 
-# Chemical Proteomics Methods for Elucidating the&lt;br&gt;Physical Protein Targets of Environmental Contaminants
+# Chemical Proteomics Methods for Elucidating the&lt;br&gt; Protein Targets of Environmental Contaminants
 
 .left-column[
 &lt;br&gt;
 &lt;br&gt;
 ## **David Hall**
-## Final Oral Exam
-## Dec. 9, 2022
+### PNNL Seminar,&lt;br&gt;Biological Sciences Division
+### May 1st, 2022
 ## 
 ]
 
-.footnoteLeft[Slides available here: .my-bold[[davidrosshall.github.io/phd-defence-talk](https://davidrosshall.github.io/phd-defence-talk/#1)]]
+.footnoteLeft[Slides available here: .my-bold[[davidrosshall.github.io/pnnl-talk](https://davidrosshall.github.io/pnnl-talk/#1)]]
 
 &lt;br&gt;
 &lt;br&gt;
@@ -247,7 +247,7 @@ background-size: cover
 # During my PhD, I've developed proteomic methods to explore environmental chemical/protein interactions
 
 .center[
-![:scale 80%](images/01-intro/overview.png)
+![:scale 80%](images/01-intro/overview2.png)
 ]
 
 
@@ -323,7 +323,7 @@ background-size: cover
 - **Nrf2**: Nuclear factor erythroid 2-related factor 2, binds to and promotes **AHR** (antioxidant response elements )
 ---
 
-# I developed an activity-based protein profiling method to identify the protein targets of mHAAs and mHAMs
+# Activity-based protein profiling lends itself to identifying the protein targets of mHAAs and mHAMs
 
 .hide-bg[
   .center[
@@ -331,9 +331,11 @@ background-size: cover
   ]
 ]
 
+.footnoteLeft[**mHAA** = monohaloacetic acid&lt;br&gt;**mHAM** = monohaloacetamide]
+
 ---
 
-# Biotin-affinity LC-MS analysis reveals compound&lt;br&gt; and class specific protein targets 
+# Biotin-affinity LC-MS analysis of 1 hr MCF7 cell exposures reveals compound and class specific protein targets 
 
 &lt;!-- if possible remake figures w/ different colours so I can remove background --&gt;
 
@@ -343,25 +345,32 @@ background-size: cover
 ]
 ]
 
+.footnoteRight[• 100 µM DBP&lt;br&gt;• Ctrl = water]
+
 ---
-# Direct adduct monitoring directly validated many of the suspected targets of IAM and IAA
+# Direct adduct monitoring validated many of the suspected targets of IAM and IAA
 
 .hide-bg[
 .center[ 
 ![:scale 78%](images/03-DBP/fig4-adducts.jpeg)
 ]
 ]
+&lt;!-- .footnoteLeft[![:scale 60%](images\03-DBP\nem_struct.png)] --&gt;
+.footenoteLeft[**NEM** = N-ethylmaleimide&lt;br&gt;]
 
-.footenoteLeft[**NEM** = N-ethylmaleimide]
 
 ---
 
-# Direct adduct monitoring provides binding-site information such as selective modification of Cys152 on GAPDH
+# Adduct monitoring provides binding-site information such as modification of &lt;mark style="background: #ADFF2F!important"&gt;Cys152&lt;/mark&gt; on GAPDH by IAM and IAA
+
 .center[
-![:scale 70%](images/03-DBP/gapdh_fresh.png)
+![:scale 45%](gifs/gapdh_LG480.gif)
 ]
+
 .footnoteRight[[P04406&lt;br&gt;AlphaFold](https://alphafold.ebi.ac.uk/entry/P04406)]
-.footenoteLeft[**IAM** = iodoacetamide&lt;br&gt;**IAA** = iodoacetic acid]
+
+.footenoteLeft[**IAM** = iodoacetamide&lt;br&gt;**IAA** = iodoacetic acid&lt;br&gt;**GAPDH** = Glyceraldehyde 3-phosphate dehydrogenase]
+
 
 
 ---
@@ -409,19 +418,20 @@ background-size: cover
 
 ---
 
-# .my-bold[Project 2]: Development of Fluorous Solid Phase Extraction for the Enrichement of Long-Chain PFAS modified peptides
+# .my-bold[Project 2]: Querying the *In Vitro* Proteome&lt;br&gt; Cysteine Reactivity of 8:2 Fluorotelomer Acrylate
 
 .left-column[
 &lt;br&gt;
 &lt;br&gt;
-## &lt;p style="color:black;"&gt;David Hall, Jeremy Gauthier, and Hui Peng &lt;/p&gt;
- 
-]  
+## &lt;p style="color:black;"&gt;**David Hall**, Jeremy Gauthier, and Hui Peng &lt;/p&gt;
+### Submitted for publication
+## 
+]
 
 &lt;br&gt;
 &lt;br&gt;
 .right[
-![:scale 60%](images/04-FSPE/fspe-toc.png)
+![:scale 60%](images/04-FSPE/fspe-toc2.png)
 ]
 
 ---
@@ -438,10 +448,9 @@ background-size: cover
 # 8:2 FTAC can also form covalant adducts with glutathione
 
 .pull-left[
-![:scale 80%](images/04-FSPE/ftac-scheme_v2.png)
+![:scale 70%](images/04-FSPE/ftac-scheme_v2.png)
 ]
 
-.footnoteLeft[**GSH** = glutathione]
 
 --
 
@@ -460,14 +469,14 @@ background-size: cover
 
 .center[
 .hide-bg[
-![:scale 60%](images/04-FSPE/FTAC-BSA-RTshifts-size.png)
+![:scale 80%](images/04-FSPE/si-bsa-anno-peps.png)
 ]
 ]
 
 .footnoteLeft[**BSA** = Bovine&lt;br&gt;Serum Albumin&lt;br&gt;**IAM** = iodoacetamide]
 ---
 
-# To selectively enrich long-chain PFAS adducted peptides I refined existing Fluorous Solid Phase Extraction methods
+# Refinement of Fluorous Solid Phase Extraction enables the selective enrichment of long-chain PFAS adducted peptides
 
 .center[
 ![:scale 90%](images/04-FSPE/fspe-scheme.png)
@@ -486,7 +495,7 @@ background-size: cover
 
 --
 
-.pull-right[
+.pull-right[ 
 .hide-bg[
 ![:scale 85%](images/04-FSPE/nLC-fspe.png)
 ]
@@ -505,13 +514,15 @@ background-size: cover
 
 ---
 
-# 8:2 FTAC only modifies GAPDH &lt;mark style="background: #98FF98!important"&gt;Cys247&lt;/mark&gt; and &lt;br&gt;not the catalytic &lt;mark style="background: #ADFF2F!important"&gt;Cys152&lt;/mark&gt; residue 
+# 8:2 FTAC and F&lt;sub&gt;13&lt;/sub&gt;-IAM only modify GAPDH &lt;mark style="background: #98FF98!important"&gt;Cys247&lt;/mark&gt; &lt;br&gt;and not the catalytic &lt;mark style="background: #ADFF2F!important"&gt;Cys152&lt;/mark&gt; residue 
 
 .center[
-![:scale 50%](gifs/gapdh_LG480.gif)
+.hide-bg[
+![:scale 70%](images/04-FSPE/gapdh_mods.png)
 ]
-.footnoteLeft[**GAPDH** = Glyceraldehyde 3-phosphate dehydrogenase]
-.footnoteRight[[P04406&lt;br&gt;AlphaFold](https://alphafold.ebi.ac.uk/entry/P04406)]
+]
+.footnoteLeft[[P04406 AlphaFold](https://alphafold.ebi.ac.uk/entry/P04406)&lt;br&gt;**GAPDH** = Glyceraldehyde 3-phosphate dehydrogenase]
+.footnoteRight[&lt;sup&gt;1&lt;/sup&gt;[Hall et al., 2020](https://doi.org/10.1021/acs.est.0c03144)&lt;br&gt;&lt;sup&gt;2&lt;/sup&gt;[Yang et al., 2005](https://doi.org/10.1021/bi0508082)]
 
 ???
 
@@ -557,7 +568,7 @@ background-size: cover
 
 
 .pull-right[
-![:scale 100%](images/04-FSPE/fspe-toc.png)
+![:scale 100%](images/04-FSPE/fspe-toc2.png)
 ]
 ---
 
@@ -760,7 +771,7 @@ class: middle center
 &lt;br&gt;
 &lt;br&gt;
 .pull-right[
-![:scale 100%](images/04-FSPE/fspe-toc.png)
+![:scale 100%](images/04-FSPE/fspe-toc2.png)
 ]
 
 ---
