fspe section drafted

--- a/index.html
+++ b/index.html
@@ -539,19 +539,28 @@ background-size: cover
 ![:scale 50%](images\04-FSPE\ftac-prot-seq.png)
 ]
 ]
+
 ---
 
 
-# 8:2 FTAC adducts promote protein aggregation&lt;br&gt;in *in vitro* crude cell lysate
+# 8:2 FTAC adducts promote protein aggregation in crude cell lysates; suggesting new possible mechanism of toxicity
 
+
+.pull-left[
 .hide-bg[
-.center[
-![:scale 45%](images/04-FSPE/protPrecip.png)
+![:scale 85%](images/04-FSPE/protPrecip.png)
 ]
 ]
-.footnote[100 µM PFAS&lt;br&gt;n = 4 per sample]
----
 
+.footnoteLeft[100 µM PFAS&lt;br&gt;n = 4 per sample]
+
+--
+
+.pull-right[
+![:scale 100%](images/04-FSPE/SchemeProtPrecip.png)
+]
+
+---
 
 # .my-bold[Project 2]: Conclusions
 
