added some notes

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@ background-color: #000000
 ???
 
 - Humans have always used animal to test toxicity, even if we didn't understand what was happening.
+- Photo from 1928, but tradition of using animals extends for millenia. 
+- Entered common vernacular - "*Canary in a coal mine*"
+
 ---
 class: inverse
 background-image: url(images/01-intro/lozenge.jpg)
@@ -74,6 +77,7 @@ background-color: #000000
 
 ???
 
+- As we increased our use of chemicals, our need to understand their risk increased as well. 
 - Referring to the 1858 Bradford sweet poisoning where sweets accidentally made w/ arsenic killed &gt; 200 people
 - Lead to the Pharmacy Act of 1868, limiting sales of poisons and drugs to qualified pharmacists 
 
@@ -87,6 +91,7 @@ background-color: #000000
 
 ???
 
+- Early efforts to understand were crude.
 - *Poison Squad*, a group of 12 volunteers who in **1901** set out to test the effects of chemical food preservatives using human trials
 - This led to the development of the FDA (U.S. Food and Drug Administration)  
 - Standing guy is William R. Carter, cook/guy who dosed food. Retired from FDA in 1946 as a charter member and pharmacist. 
@@ -101,6 +106,7 @@ background-color: #000000
 
 ???
 
+- Human test quickly shifted to animal studies, rapidly standardized for routine testing. 
 - Draize test developed in 1944 at US FDA
 - Initially use for cosmetics, but expanded to other compounds
 - Topical application of suspected irritant, observed 14 days
@@ -115,6 +121,7 @@ background-color: #000000
 .footnoteRight[[Caven&lt;br&gt;Images&lt;br&gt;(2021)](https://www.nature.com/articles/d43978-021-00009-6)]
 
 ???
+
 - Modern assessments have improved in understanding and quality of animal welfare
 - Triaged using *in vitro* screening; lower doses; and lower endpoints 
 - Still reliant on animal testing
@@ -158,6 +165,8 @@ class: center, middle
 
 ???
 
+- Implicitly understand this; think dogs can't eat chocolate or failure of candidates during the transition form animal- to human-trials
+- PCB77 family of persistant organic pollutants notes for hydrophobicity, halogenated, and plannar geometry 
 - Landfowl (*galliformes*) such as **Chickens** are susceptible to halogenated aryl hydrocarbons (HAHs) unlike waterfowl (*Anseriformes*) such as **Ducks** and **Gulls**
 
 ---
@@ -174,7 +183,9 @@ class: center, middle
 
 ???
 
-- MIEs are most likely proteins 
+- AOPS fundamental to addressing thiese problems
+- Idea is if we understand how a chemical is toxic, we can test against it's MIE to increase throughput testing
+- Proteins are the mediators of cellular activity, therefo MIEs are likely to be proteins. 
 
 ---
 
@@ -188,7 +199,8 @@ class: center, middle
 
 ???
 
-- **AHR** is the **molecular initiating event** for halogenated aryl hydrocarbon toxicity. 
+- Compound in pocket is TCDD, similar family of pops as PCB77
+- Binding to AHR is the MIE for plannar, halogenated, hydropbohic compounds.
 
 --
 
@@ -204,6 +216,7 @@ class: center, middle
 
 - Waterfowl and landfowl AHR **binding pocket differs by 3 amino acids**
 - 2 of which control binding 
+
 ---
 class: inverse middle center
 background-image: url(images/01-intro/cell.png
@@ -262,6 +275,11 @@ background-size: cover
 ]
 .footnoteRight[[Data from&lt;br&gt;Hrudey&lt;br&gt;2009](https://www.sciencedirect.com/science/article/pii/S0043135409000943?via%3Dihub#fig4)]
 
+???
+
+- Water chlorination is one of the greatest public health advacnements 
+- Consumption of drinking water is linked to bladder cancer, among other adverse health effects. 
+
 ---
 
 # Adverse health outcomes of chlorinated water are caused by halogenated disinfection byproducts 
@@ -272,8 +290,8 @@ background-size: cover
 .footnoteRight[.my-bold[[THMs](https://www.canada.ca/en/health-canada/services/publications/healthy-living/guidelines-canadian-drinking-water-quality-trihalomethanes.html)] and .my-bold[[HAA5](https://www.canada.ca/en/health-canada/services/publications/healthy-living/guidelines-canadian-drinking-water-quality-guideline-technical-document-haloacetic-acids.html)] are &lt;br&gt;regulated in Canada]
 
 ???
-
-- Regulated compounds are most abbundant, but not the most toxic. 
+- DBPs form as by products during same oxidation reactions used to disinfect water
+- Regulated compounds are most abundant, but not the most toxic. 
 - General trend in toxicity is towards bottom-right. 
 
 ---
@@ -288,7 +306,8 @@ background-size: cover
 
 ???
 
-- Goal of project is to identify proteins modified by DBPs to assess toxicity. 
+- HAAs and HAMs are reported to be mutagenic, but do not bind to nucleic acids
+- Beleived to react with nucleophilic cysteins via SN2 reactions
 
 
 --
@@ -300,6 +319,13 @@ background-size: cover
 .footnoteRight[[Marina &amp; Gladyshev&lt;br&gt; *JBC*, 2012]()]
 
 &lt;!-- get CHO cytoxicuty date here: https://www.sciencedirect.com/science/article/pii/S1001074217303285 --&gt;
+
+???
+
+- Cysteins occupy critical and distinct roles
+- Goal of project is to identify proteins modified by DBPs to assess toxicity. 
+
+
 ---
 
 # Order of DBP cytoxicity is I &gt; Br &gt;&gt; Cl,&lt;br&gt;but only HAMS induce Nrf2 oxidative stress
